[package]
name = "roccat-tools"
version = "0.1.0"
authors = ["Ash Levy <ashlea@protonmail.com>"]

[workspace]
members = ["libroccat", "bitfield", "libroccat/hidraw-derive"]

[dependencies]
libroccat = { path = "libroccat" }
clap = "2.27.1"
env_logger = "0.4.3"
failure = "0.1.1"
log = "0.3.9"
rlua = "0.9.6"
