[package]
name = "roccat-tools"
version = "0.1.0"
authors = ["ash lea <ashlea@protonmail.com>"]
edition = "2018"

[workspace]
members = ["libroccat", "bitfield", "libroccat/hidraw-derive"]

[dependencies]
libroccat = { path = "libroccat" }
clap = "2.29.2"
env_logger = "0.6.2"
failure = "0.1.1"
log = "0.4.1"
rlua = "0.16.3"
