[package]
name = "libroccat"
version = "0.1.0"
authors = ["Ash Levy <ashlea@protonmail.com>"]

[dependencies]
bitfield = { path = "../bitfield" }
error-chain = "0.11.0"
futures = "0.1.17"
libudev = "0.2.0"
nix = "0.9.0"
tokio-core = "0.1.10"
tokio-file-unix = "0.4.1"
tokio-io = "0.1.3"

[dependencies.hidraw-derive]
path = "hidraw-derive"
